plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
    id "io.sentry.jvm.gradle" version "6.9.0" // Sentry Gradle Plugin
}

group = 'com.weiver'
version = '0.0.1-SNAPSHOT'
description = 'AI Interview & Job Matching Service'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudAwsVersion', '3.4.2')
    set('jjwtVersion', '0.12.6')
    set('querydslVersion', '5.1.0')
    set('testcontainersVersion', '1.20.4')
    set('mapstructVersion', '1.6.3')
}

dependencies {

    //----------------------------------------------------------------------
    // 1. Web Layer
    //----------------------------------------------------------------------

    // 기본 REST API
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // 입력값 검증
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // WebFlux(WebClient)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //----------------------------------------------------------------------
    // 2. Security & JWT
    //----------------------------------------------------------------------

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT 라이브러리
    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    //----------------------------------------------------------------------
    // 3. Data Layer
    //----------------------------------------------------------------------

    // Spring Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // PostgreSQL 드라이버
    runtimeOnly 'org.postgresql:postgresql'

    // Flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    //----------------------------------------------------------------------
    // 4. Cache
    //----------------------------------------------------------------------

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // ----------------------------------------------------------------------
    // 5. Message Queue
    // -----------------------------------------------------------------------

    // AMQP (RabbitMQ)
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // ----------------------------------------------------------------------
    // 6. AWS
    // ----------------------------------------------------------------------

    // Spring Cloud AWS S3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'
    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:${springCloudAwsVersion}")

    // ----------------------------------------------------------------------
    // 7. Monitoring
    // ----------------------------------------------------------------------
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    implementation 'io.sentry:sentry-spring-boot-starter:8.43.0'

    // ----------------------------------------------------------------------
    // 8. Utilities
    // ----------------------------------------------------------------------

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MapStruct
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    // binding
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    // ----------------------------------------------------------------------
    // 9. Testing
    // ----------------------------------------------------------------------

    // Spring Boot 테스트 기본
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Spring Security 테스트
    testImplementation 'org.springframework.security:spring-security-test'

    // RabbitMQ 테스트
    testImplementation 'org.springframework.amqp:spring-rabbit-test'

    // WebClient 테스트용 MockWebServer
    testImplementation 'com.squareup.okhttp3:mockwebserver'

    // Testcontainers BOM (버전 관리)
    implementation platform("org.testcontainers:testcontainers-bom:${testcontainersVersion}")

    // Spring Boot 3.1+ Testcontainers 공식 지원 (@ServiceConnection 사용 가능)
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'

    // Testcontainers JUnit5 연동 및 컨테이너 모듈
    testImplementation "org.testcontainers:junit-jupiter"
    testImplementation "org.testcontainers:postgresql"
    testImplementation "org.testcontainers:rabbitmq"

    // JUnit Platform Launcher
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// QueryDSL Q 클래스 생성 경로 설정
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile.path
sourceSets {
    main {
        java {
            srcDirs querydslDir
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    // QueryDSL Q클래스 생성 위치 지정
    options.generatedSourceOutputDirectory = file(querydslDir)
}

// clean 시 Q클래스도 함께 삭제
clean {
    doLast {
        file(querydslDir).deleteDir()
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()

    // 테스트 병렬 실행 (Testcontainers 사용 시 주의: 컨테이너 포트 충돌 가능)
    // MVP 단계에서는 일단 순차 실행이 안정적
    // maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1

    // 테스트 JVM 힙 메모리
    jvmArgs '-Xmx512m'

    // 테스트 결과 로깅
    testLogging {
        events 'passed', 'skipped', 'failed'
        showExceptions = true
        showCauses = true
    }
}


bootJar {
    archiveFileName = 'app.jar'
}

jar {
    enabled = false
}

sentry {
    // Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
    // This enables source context, allowing you to see your source
    // code as part of your stack traces in Sentry.
    includeSourceContext = true

    org = "weiver"
    projectName = "java-spring-boot"
    authToken = System.getenv("SENTRY_AUTH_TOKEN")
}

afterEvaluate {
    def sentryTasks = [
            'generateSentryBundleIdJava',
            'sentryCollectSourcesJava',
            'uploadSentrySourceContextJava'
    ]

    sentryTasks.each { taskName ->
        if (tasks.findByName(taskName)) {
            tasks.named(taskName) {
                mustRunAfter tasks.named('compileJava')
            }
        }
    }
}
